--- a/agents/search/test.ipynb
+++ b/agents/search/test.ipynb
@@ -1217,6 +1217,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Hello! How can I assist you today? Feel free to ask me any questions or let me know if you need help with anything specific.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 28, 'prompt_tokens': 30, 'total_tokens': 58, 'completion_tokens_details': None, 'prompt_tokens_details': None, 'completion_tokens_after_first_per_sec': 218.55493777006672, 'completion_tokens_after_first_per_sec_first_ten': 224.5695432856169, 'completion_tokens_per_sec': 151.99841582723198, 'end_time': 1741272962.4598475, 'is_last_response': True, 'start_time': 1741272962.275635, 'stop_reason': 'stop', 'time_to_first_token': 0.06067371368408203, 'total_latency': 0.18421244621276855, 'total_tokens_per_sec': 314.8538613564091}, 'model_name': 'Qwen2.5-72B-Instruct', 'system_fingerprint': 'fastcoe', 'finish_reason': 'stop', 'logprobs': None}, id='run-dafe96e0-812f-4ae3-b411-e28e47ad1589-0', usage_metadata={'input_tokens': 30, 'output_tokens': 28, 'total_tokens': 58, 'input_token_details': {}, 'output_token_details': {}})"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_openai import ChatOpenAI\n",
+    "llm=ChatOpenAI(model='Qwen2.5-72B-Instruct',temperature=0,base_url=\"https://api.sambanova.ai/v1\",api_key='2f60038f-453a-4620-ad3e-25fbfda9fcdd')\n",
+    "llm.invoke(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
