refactor: move vector db to qdrant

--- a/agents/search/test.ipynb
+++ b/agents/search/test.ipynb
@@ -582,7 +582,7 @@
    ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
-    "llm=ChatOpenAI(model='Qwen2.5-72B-Instruct',temperature=0,base_url=\"https://api.sambanova.ai/v1\",api_key='2f60038f-453a-4620-ad3e-25fbfda9fcdd')\n",
+    "llm=ChatOpenAI(model='Qwen2.5-72B-Instruct',temperature=0,base_url=\"https://api.sambanova.ai/v1\")\n",
     "llm.invoke(\"hello\")"
    ]
   },
